# FastGrepReplace

./: FastGrepReplace.mac  FastGrepReplace.sln  FastGrepReplace.txt
FastGrepReplace/: Clipboard.cpp  Clipboard.h  Cp932Unicode.c  Cp932Unicode.h  EucJpUnicode.c  EucJpUnicode.h  FastGrepReplace.cpp  FastGrepReplace.def  FastGrepReplace.rc  FastGrepReplace.vcproj  FastGrepReplace.vcxproj  FastGrepReplace.vcxproj.filters  HideUtil.cpp  HideUtil.h  HmFilter.h  Registory.cpp  Registory.h  Ucs2ToUtf7.cpp  libiconv_stub.h  resource.h  stdafx.cpp  stdafx.h  test.h
FastGrepReplace/nkf-2.0.8/: config.h  dll.def  dll.rc  nkf.c  nkf.doc  nkf.h  nkf32dll.c  version.rc
FastGrepReplace/nkf-2.0.8/NKF.mod/: NKF.pm  NKF.xs
FastGrepReplace/wkf-1.3.11/: API  HISTORY  JAPANESE  Makefile.in  Makefile.os2  Makefile.vc  README  TODO  api.c  api2.c  config.h.in  config.h.vc  configure  configure.in  conv.c  euccodemap.h  functions.h  guess.c  jiscodemap.h  kanacodemap.h  kanji.h  sjiscodemap.h  wkf.1  wkf.c  wkf.cat  wkf.h  zenasciimap.h
FastGrepReplace/wkf-1.3.11/doc/: EUC.eps  JIS.eps  Makefile  SJIS.eps  kanji.tex  zenascii.txt
FastGrepReplace/wkf-1.3.11/test/: alpha.ascii  alpha.euc  alpha.jis  alpha.sjis  check.sh  coffee.txt  dialy.euc  dialy.eucz  dialy.jis  dialy.jisz  dialy.sjis  dialy.sjisz  text.ascii  text.euc  text.jis  text.sjis  x0201.euc  x0201.jis  x0201.sjis  x0201.x0208.euc  x0201.x0208.jis  x0201.x0208.sjis  x0212.euc  x0212.jis  x0212.sjis
ToolsAndLibs/: wkf-1.3.11.tar.bz2
test/binarydata/: _project.mpp  _tiff.tif
test/linefeed_test/: _list.txt  blank.expect.txt  eof.actual.txt  eof.expect.txt  mixed_lf.actual.txt  mixed_lf.expect.txt  mixed_lf2.expect.txt
test/longline/: 2047bytes_ASCII.actual.txt  2047bytes_NotCP932.txt  2047bytes_UTF16LE.actual.txt  2047bytes_UTF7.expect.txt  2047bytes_UTF8.actual.txt  2048bytes_ASCII.expect.txt  2048bytes_NotCP932.txt  2048bytes_UTF16LE.actual.txt  2048bytes_UTF7.actual.txt  2048bytes_UTF8.actual.txt  _list.txt
test/testdata/: EUC-JP.CR.actual.txt  EUC-JP.CR.expect.txt  EUC-JP.CRLF.actual.txt  EUC-JP.CRLF.expect.txt  FileList.xls  JIS.CR.actual.txt  JIS.CR.expect.txt  JIS.CRLF.expect.txt  JIS.LF.actual.txt  Shift_JIS.CR.actual.txt  Shift_JIS.CR.expect.txt  Shift_JIS.CRLF.actual.txt  Shift_JIS.CRLF.expect.txt  Shift_JIS.LF.actual.txt  Shift_JIS.LF.expect.txt  UTF-16BE_NOBOM.CR.actual.txt  UTF-16BE_NOBOM.CR.expect.txt  UTF-16BE_NOBOM.CRLF.actual.txt  UTF-16BE_NOBOM.CRLF.expect.txt  UTF-16BE_NOBOM.LF.actual.txt  UTF-16BE_NOBOM.LF.expect.txt  UTF-16BE_WITHBOM.CR.actual.txt  UTF-16BE_WITHBOM.CR.expect.txt  UTF-16BE_WITHBOM.CRLF.actual.txt  UTF-16BE_WITHBOM.CRLF.expect.txt  UTF-16BE_WITHBOM.LF.actual.txt  UTF-16BE_WITHBOM.LF.expect.txt  UTF-16LE_NOBOM.CR.actual.txt  UTF-16LE_NOBOM.CR.expect.txt  UTF-16LE_NOBOM.CRLF.actual.txt  UTF-16LE_NOBOM.CRLF.expect.txt  UTF-16LE_NOBOM.LF.actual.txt  UTF-16LE_NOBOM.LF.expect.txt  UTF-16LE_WITHBOM.CR.actual.txt  UTF-16LE_WITHBOM.CR.expect.txt  UTF-16LE_WITHBOM.CRLF.actual.txt  UTF-16LE_WITHBOM.CRLF.expect.txt  UTF-16LE_WITHBOM.LF.actual.txt  UTF-16LE_WITHBOM.LF.expect.txt  UTF-7.CR.actual.txt  (+14 more)
